--- a/ClientApp/src/app/fpp-individual/fpp-individual.component.html
+++ b/ClientApp/src/app/fpp-individual/fpp-individual.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 
-  <form class="ml-3">
+  <form [formGroup]="fppgformgrp" class="ml-3">
    
       <div class="row">
         <app-radio-button></app-radio-button>
