--- a/ClientApp/src/app/group-setup/group-setup.component.html
+++ b/ClientApp/src/app/group-setup/group-setup.component.html
@@ -4,7 +4,6 @@
   </div>
 </div>
 
-
 <div class="container" *ngIf="isLoading">
   <div class="row">
     <div class="form-group col-md-3">
@@ -24,14 +23,12 @@
  </div>
  </div>
  
-
   <!-- Group Section -->
-
 
   <div class="row">
     <div class="form-group col-md-3">
       <span class="label label-default">Group Number</span>
-      <input type="number" max="5" class="form-control mb-2" [(ngModel)]="groupNumber" style="width: 100%;"
+      <input type="number"  maxlength="5" class="form-control mb-2" [(ngModel)]="groupNumber" style="width: 100%;"
         placeholder="Group Number Field">
     </div>
     <div class="form-group col-md-3">
@@ -66,7 +63,6 @@
         class="form-control mb-2" placeholder=" Group Vendor Email">
     </div>
 
-
     <div class="col-md-3">
       <div>
         <span class="label label-default">Occupation Class</span>
@@ -74,14 +70,10 @@
           <!-- <option selected>Select Occupation Class</option> -->
           <!-- <option value="1">Occ Class</option> -->
           <option *ngFor="let item of occClass">{{item.occupation}}</option>
-
         </select>
       </div>
-
     </div>
-
   </div>
-
 
   <div class="row">
     <div class=" col-md-3">
@@ -102,10 +94,84 @@
       </select>
     </div>
   </div>
+    <div>
+   
+      <form class="agent-form" [formGroup]="agentformgrp">
+        <!-- first-row -->
+        <div class="row" style="justify-content:space-evenly;">
+            <div class="col-md-3">
+                <span class ="label label-default">Agent Number</span>
+                <input type="text" formControlName="AgentNumber" [(ngModel)]="agentNumber_0" name="text" class="form-control mb-2" style="width: 100%;" 
+                    placeholder="Primary Agent Number"> 
+            </div>
+            <div class="col-md-3">
+                <span class ="label label-default">Agent SubCount</span>
+                <input type="text" formControlName="AgentSubCount" [(ngModel)]="agentSubCount_0"  class="form-control mb-2" style="width: 100%;" 
+                    placeholder="Agent SubCount">
+            </div>
+            <div class="col-md-3">
+                <span class ="label label-default">Commisson Split %</span>
+                <input type="text" formControlName="CommissonSplit" [(ngModel)]="agentCommissionSPlit_0" class="form-control mb-2 "  style="width: 100%;" 
+                    placeholder="Commisson Split">
+            </div>
 
-
-  <app-agent-setup></app-agent-setup>
-
+            <div class="col-md-3">
+                <span class ="label label-default">Agent Name</span>
+                <input type="text" formControlName="AgentName" [(ngModel)]="agent_name" class="form-control mb-2 " style="width: 100%;" 
+                    placeholder="Agent Name">
+            </div>
+        </div>
+       
+        <!-- second-row -->
+        <div class="row">
+            <div class="col-md-3">
+                <input type="text" formControlName="AgentNumber1" [(ngModel)]="agentNumber_1"  class="form-control mb-2" style="width: 100%;" 
+                    placeholder="Agent Number">
+            </div>
+            <div class="col-md-3">
+                <input type="text" formControlName="AgentSubCount1" [(ngModel)]="agentSubCount_1" class="form-control mb-2" style="width: 100%;" 
+                    placeholder="Agent SubCount">
+            </div>
+            <div class="col-md-3">
+                <input type="text" formControlName="CommissonSplit1" [(ngModel)]="agentCommissionSPlit_1" class="form-control mb-2 " style="width: 100%;" 
+                    placeholder="Commisson Split">
+            </div>
+           
+        </div>
+        <!-- 3rd-row -->
+        <div class="row" >
+            <div class="col-md-3">
+                <input type="text" formControlName="AgentNumber2" [(ngModel)]="agentNumber_2" class="form-control mb-2" style="width: 100%;" 
+                    placeholder="Agent Number">
+            </div>
+            <div class="col-md-3">
+                <input type="text" formControlName="AgentSubCount2" [(ngModel)]="agentSubCount_2" class="form-control mb-2" style="width: 100%;" 
+                    placeholder="Agent SubCount">
+            </div>
+            <div class="col-md-3">
+                <input type="text" formControlName="CommissonSplit2" [(ngModel)]="agentCommissionSPlit_2" class="form-control mb-2 " style="width: 100%;" 
+                    placeholder="Commisson Split">
+            </div>
+          
+        </div>
+        <!-- 4th-row -->
+        <div class="row" >
+            <div class="col-md-3">
+                <input type="text" formControlName="AgentNumber3" [(ngModel)]="agentNumber_3"  class="form-control mb-2" style="width: 100%;" 
+                    placeholder="Agent Number">
+            </div>
+            <div class="col-md-3">
+                <input type="text" formControlName="AgentSubCount3" [(ngModel)]="agentSubCount_3"  class="form-control mb-2" style="width: 100%;" 
+                    placeholder="Agent SubCount">
+            </div>
+            <div class="col-md-3">
+                <input type="text" formControlName="CommissonSplit3" [(ngModel)]="agentCommissionSPlit_3" class="form-control mb-2 " style="width: 100%;" 
+                    placeholder="Commisson Split">
+            </div>
+            
+        </div>
+    </form>
+  </div>
 
   <div class="container">
     <div id="accordion" class="accordion">
@@ -114,14 +180,88 @@
           <a class="card-title">
             FPPG
           </a>
-         
             <mat-slide-toggle style="float: right;" (change)="toggleChangeProduct($event)" [color]="toggleActiveColor">{{checkedToggleProduct}}</mat-slide-toggle>
-         
-         
         </div>
         <div id="collapseOne" class="card-body collapse" data-parent="#accordion">
 
-          <app-fppg [lookupValue]="lookupSitusStateValue" #child [dateValue]="dateChange"></app-fppg>
+          <app-fppg [lookupValue]="lookupSitusStateValue" #child [dateValue]="dateChange"
+          ><form class="agent-form" [formGroup]="agentformgrp">
+            <!-- first-row -->
+            <div class="row" style="justify-content:space-evenly;">
+                <div class="col-md-3">
+                    <span class ="label label-default">Agent Number</span>
+                    <input type="text" formControlName="AgentNumber" [(ngModel)]="agentNumber_0" name="text" class="form-control mb-2" style="width: 100%;" 
+                        placeholder="Primary Agent Number"> 
+                </div>
+                <div class="col-md-3">
+                    <span class ="label label-default">Agent SubCount</span>
+                    <input type="text" formControlName="AgentSubCount" [(ngModel)]="agentSubCount_0"  class="form-control mb-2" style="width: 100%;" 
+                        placeholder="Agent SubCount">
+                </div>
+                <div class="col-md-3">
+                    <span class ="label label-default">Commisson Split %</span>
+                    <input type="text" formControlName="CommissonSplit" [(ngModel)]="agentCommissionSPlit_0" class="form-control mb-2 "  style="width: 100%;" 
+                        placeholder="Commisson Split">
+                </div>
+    
+                <div class="col-md-3">
+                    <span class ="label label-default">Agent Name</span>
+                    <input type="text" formControlName="AgentName" [(ngModel)]="agent_name" class="form-control mb-2 " style="width: 100%;" 
+                        placeholder="Agent Name">
+                </div>
+            </div>
+           
+            <!-- second-row -->
+            <div class="row">
+                <div class="col-md-3">
+                    <input type="text" formControlName="AgentNumber1" [(ngModel)]="agentNumber_1"  class="form-control mb-2" style="width: 100%;" 
+                        placeholder="Agent Number">
+                </div>
+                <div class="col-md-3">
+                    <input type="text" formControlName="AgentSubCount1" [(ngModel)]="agentSubCount_1" class="form-control mb-2" style="width: 100%;" 
+                        placeholder="Agent SubCount">
+                </div>
+                <div class="col-md-3">
+                    <input type="text" formControlName="CommissonSplit1" [(ngModel)]="agentCommissionSPlit_1" class="form-control mb-2 " style="width: 100%;" 
+                        placeholder="Commisson Split">
+                </div>
+               
+            </div>
+            <!-- 3rd-row -->
+            <div class="row" >
+                <div class="col-md-3">
+                    <input type="text" formControlName="AgentNumber2" [(ngModel)]="agentNumber_2" class="form-control mb-2" style="width: 100%;" 
+                        placeholder="Agent Number">
+                </div>
+                <div class="col-md-3">
+                    <input type="text" formControlName="AgentSubCount2" [(ngModel)]="agentSubCount_2" class="form-control mb-2" style="width: 100%;" 
+                        placeholder="Agent SubCount">
+                </div>
+                <div class="col-md-3">
+                    <input type="text" formControlName="CommissonSplit2" [(ngModel)]="agentCommissionSPlit_2" class="form-control mb-2 " style="width: 100%;" 
+                        placeholder="Commisson Split">
+                </div>
+              
+            </div>
+            <!-- 4th-row -->
+            <div class="row" >
+                <div class="col-md-3">
+                    <input type="text" formControlName="AgentNumber3" [(ngModel)]="agentNumber_3"  class="form-control mb-2" style="width: 100%;" 
+                        placeholder="Agent Number">
+                </div>
+                <div class="col-md-3">
+                    <input type="text" formControlName="AgentSubCount3" [(ngModel)]="agentSubCount_3"  class="form-control mb-2" style="width: 100%;" 
+                        placeholder="Agent SubCount">
+                </div>
+                <div class="col-md-3">
+                    <input type="text" formControlName="CommissonSplit3" [(ngModel)]="agentCommissionSPlit_3" class="form-control mb-2 " style="width: 100%;" 
+                        placeholder="Commisson Split">
+                </div>
+                
+            </div>
+        </form>
+        
+      </app-fppg>
         </div>
         <div class="card-header collapsed mb-2" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
           <a class="card-title">
