--- a/ClientApp/src/app/fpp-individual/fpp-individual.component.html
+++ b/ClientApp/src/app/fpp-individual/fpp-individual.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 
-  <form [formGroup]="fppgformgrp" class="ml-3">
+  <form [formGroup]="fppiformgrp" class="ml-3">
 
    
       <div class="row" style="justify-content:space-evenly;margin-right: 7%;">
