--- a/ClientApp/src/app/group-setup/group-setup.component.html
+++ b/ClientApp/src/app/group-setup/group-setup.component.html
@@ -184,8 +184,8 @@
         </div>
         <div id="collapseOne" class="card-body collapse" data-parent="#accordion">
 
-          <app-fppg [lookupValue]="lookupSitusStateValue" #child [dateValue]="dateChange"
-          ><form class="agent-form" [formGroup]="agentformgrp">
+          <app-fppg [lookupValue]="lookupSitusStateValue" #child [dateValue]="dateChange">
+            <form class="agent-form" [formGroup]="agentformgrp">
             <!-- first-row -->
             <div class="row" style="justify-content:space-evenly;">
                 <div class="col-md-3">
