--- a/ClientApp/src/app/employer-paid-ci/employer-paid-ci.component.html
+++ b/ClientApp/src/app/employer-paid-ci/employer-paid-ci.component.html
@@ -15,7 +15,7 @@
     </div>
     <div class="col-3">
       <span class="label label-default">Group Effective Date</span>
-      <input type="date" [value]="dateValue" [min]="minDate" class="form-control mb-2 " style="width: 100%;"
+      <input type="date"  [(ngModel)]="latest_date" [value]="latest_date" [min]="minDate" class="form-control mb-2 " style="width: 100%;"
       formControlName="FCempCIEffectiveDate" placeholder="Group Effective Date">
 
     </div>
@@ -123,7 +123,7 @@ Amount">
     </div>
 
   </div>
-    <app-agent-setup></app-agent-setup>
+  <ng-content></ng-content>
   </form>
 </div>
   
