--- a/ClientApp/src/app/fpp-individual/fpp-individual.component.html
+++ b/ClientApp/src/app/fpp-individual/fpp-individual.component.html
@@ -16,7 +16,7 @@
         </div>
         <div class="col-3">
           <span class="label label-default">Group Effective Date</span>
-          <input type="date" [value]="dateValue" formControlName = "FCfppiEffectiveDate" [min]="minDate" class="form-control mb-2 " style="width: 100%;"
+          <input type="date"  [(ngModel)]="latest_date" [value]="latest_date" formControlName = "FCfppiEffectiveDate" [min]="minDate" class="form-control mb-2 " style="width: 100%;"
             placeholder="Group Effective Date">
 
         </div>
@@ -236,7 +236,7 @@
 
    
     <div class="mt-4">
-      <app-agent-setup></app-agent-setup>
+      <ng-content></ng-content>
     </div>
 
   </form>
