--- a/ClientApp/src/app/group-setup/group-setup.component.html
+++ b/ClientApp/src/app/group-setup/group-setup.component.html
@@ -19,7 +19,7 @@
        </button>
         </div>
         <div class="form-group col-md-3 mt-4 mb-4"> 
-    <mat-slide-toggle (change)="toggleChange($event)" [color]="toggleActiveColor">{{checkedToggle}}</mat-slide-toggle>
+    <mat-slide-toggle (change)="toggleChange($event)" [checked]="true" [color]="toggleActiveColor">{{checkedToggle}}</mat-slide-toggle>
  </div>
  </div>
  
