Default Payment mode selected

--- a/ClientApp/src/app/group-setup/group-setup.component.html
+++ b/ClientApp/src/app/group-setup/group-setup.component.html
@@ -45,7 +45,7 @@
       <span class="label label-default">Group Payment Mode</span>
       <select class="select-dropdown" #paymentMode (change)="getLookupValuePaymentMode($event.target.value)">
         <!-- <option hidden disabled selected value> -- select a Payment Mode -- </option> -->
-        <option *ngFor="let each of paymentModes" value="{{each.grpPymn}}">{{each.grpPymntMdNm}}</option>
+        <option *ngFor="let each of paymentModes" [selected]="each.grpPymn == '10007'" value="{{each.grpPymn}}">{{each.grpPymntMdNm}}</option>
       </select>
     </div>
   </div>
