harsh new change

--- a/ClientApp/src/app/accident/accident.component.html
+++ b/ClientApp/src/app/accident/accident.component.html
@@ -87,7 +87,9 @@
       </div>
       
     </div>
-    <app-agent-setup></app-agent-setup>
+    <div class="mt-4">
+      <ng-content></ng-content>
+     </div>
   </form>  
 </div>
 
