--- a/ClientApp/src/app/basic-group-life/basic-group-life.component.html
+++ b/ClientApp/src/app/basic-group-life/basic-group-life.component.html
@@ -82,6 +82,8 @@
         </select>
       </div>
     </div>
-    <app-agent-setup></app-agent-setup>
+    <div class="mt-4">
+      <ng-content></ng-content>
+     </div>
   </form>
 </div>
