--- a/ClientApp/src/app/employer-paid-ci/employer-paid-ci.component.html
+++ b/ClientApp/src/app/employer-paid-ci/employer-paid-ci.component.html
@@ -123,7 +123,9 @@ Amount">
     </div>
 
   </div>
-    <app-agent-setup></app-agent-setup>
+  <div class="mt-4">
+    <ng-content></ng-content>
+   </div>
   </form>
 </div>
   
