--- a/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.html
+++ b/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.html
@@ -48,7 +48,7 @@
 
   <div class="mt-4">
 
-    <app-agent-setup></app-agent-setup>
+   
     <div class="mt-4">
       <mat-checkbox class="margin" [(ngModel)]="name">Child Name</mat-checkbox>
       <mat-checkbox class="margin" [(ngModel)]="dob">Child Date of Birth </mat-checkbox>
@@ -56,5 +56,8 @@
     </div>
 
   </div>
+  <div class="mt-4">
+    <ng-content></ng-content>
+   </div>
   </form>
 </div>
