--- a/ClientApp/src/app/vol-group-life/vol-group-life.component.html
+++ b/ClientApp/src/app/vol-group-life/vol-group-life.component.html
@@ -178,8 +178,8 @@
     </div>
 
     <div class="mt-4">
-      <app-agent-setup></app-agent-setup>
-    </div>
+      <ng-content></ng-content>
+     </div>
 
   </form>
 </div>
