--- a/ClientApp/src/app/fpp-individual/fpp-individual.component.html
+++ b/ClientApp/src/app/fpp-individual/fpp-individual.component.html
@@ -235,9 +235,9 @@
 
 
    
-    <div class="mt-4">
-      <app-agent-setup></app-agent-setup>
-    </div>
+      <div class="mt-4">
+        <ng-content></ng-content>
+       </div>
 
   </form>
   </div>
