--- a/ClientApp/src/app/fppg/fppg.component.html
+++ b/ClientApp/src/app/fppg/fppg.component.html
@@ -33,7 +33,7 @@
        </div>
        <div class="col-3">
          <span class="label label-default">Situs State</span>
-         <select class="form-control" formControlName = "FCfppgSitusState" [value]="lookupValue">
+         <select class="form-control" formControlName = "FCfppgSitusState" >
            <!-- <option value="0" selected="selected">{{ lookupValue }}</option> -->
            <option  *ngFor="let lookUpDataSitusState of lookUpDataSitusStates">
              {{lookUpDataSitusState.state}}</option>
