--- a/ClientApp/src/app/voluntary-ci/voluntary-ci.component.html
+++ b/ClientApp/src/app/voluntary-ci/voluntary-ci.component.html
@@ -248,8 +248,7 @@
     </div>
 
     <div class="mt-4">
-      <app-agent-setup></app-agent-setup>
-    </div>
-
+      <ng-content></ng-content>
+     </div>
   </form>
 </div>
